--- a/index.html
+++ b/index.html
@@ -49,6 +49,28 @@
     </article>
   </section>
 
+  <section id="liked" class="liked-container">
+    <div class="liked-header">
+      <h2 class="liked-title">Favoritos</h2>
+      <button class="liked-btn">Ver más</button>
+    </div>
+
+    <article class="liked-movieList">
+      <div class="movie-container movie-container--loading"></div>
+      <div class="movie-container movie-container--loading"></div>
+      <div class="movie-container movie-container--loading"></div>
+
+      <!-- <div class="movie-container">
+        <img
+          src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
+          class="movie-img"
+          alt="Nombre de la película"
+        />
+      </div> -->
+
+    </article>
+  </section>
+
   <section id="categoriesPreview" class="categoriesPreview-container">
     <h2 class="categoriesPreview-title">Categorías</h2>
 
