--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@700;800&family=Red+Hat+Display:wght@400;500&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./styles/app.css" />
 
-  <title>Movies</title>
+  <title>VABKLB Movies</title>
 </head>
 <body>
   <header id="header" class="header-container">
     <span class="header-arrow inactive">&lt;</span>
-    <h1 class="header-title">Movies</h1>
+    <h1 class="header-title">Movies VABKLB</h1>
     <h1 class="header-title header-title--categoryView inactive">Acción</h1>
 
     <form id="searchForm" class="header-searchForm">
@@ -141,6 +141,7 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="./src/secrets.js"></script>
   <script src="./src/nodes.js"></script>
+  <script src="./src//language.js"></script>
   <script src="./src/main.js" ></script>
   <script src="./src/navigation.js"></script>
 </body>
